vlib/v/parser/tests/expr_evaluated_but_not_used_c.vv
fn main() {
	a := 10
	`b`
	println(a)
}
